RESOLVED FIXED171432
gl.readPixels with type gl.FLOAT does not work
https://bugs.webkit.org/show_bug.cgi?id=171432
Summary gl.readPixels with type gl.FLOAT does not work
aaron.montag
Reported 2017-04-28 08:22:38 PDT
Although floating point textures are supported through the "OES_texture_float" extension, reading back the pixels with gl.readPixels(x, y, width, height, gl.RGBA, gl.FLOAT, pixels); throws an error: "WebGL: INVALID_ENUM: readPixels: invalid type" A running example: https://cindyjs.org/examples/cindygl/34_cpuimagergba.html (It works with recent versions of Chromium and Firefox)
Attachments
Patch (16.04 KB, patch)
2019-03-29 17:57 PDT, Dean Jackson
no flags
Archive of layout-test-results from ews122 for ios-simulator-wk2 (2.75 MB, application/zip)
2019-03-29 22:23 PDT, EWS Watchlist
no flags
Patch (17.07 KB, patch)
2019-03-30 12:39 PDT, Dean Jackson
graouts: review+
Radar WebKit Bug Importer
Comment 1 2017-04-29 10:05:51 PDT
Michael Herzog
Comment 2 2019-02-14 03:31:38 PST
One of the three.js example demonstrates the bug, too. It is broken since a while now. A fix for this issue would be great. https://threejs.org/examples/webgl_read_float_buffer.html
Dean Jackson
Comment 3 2019-03-29 17:57:25 PDT
EWS Watchlist
Comment 4 2019-03-29 17:59:58 PDT
Attachment 366336 [details] did not pass style-queue: ERROR: Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp:3545: One line control clauses should not use braces. [whitespace/braces] [4] ERROR: Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp:3547: One line control clauses should not use braces. [whitespace/braces] [4] ERROR: Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp:3563: Extra space before ) [whitespace/parens] [2] ERROR: Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp:3564: Extra space before ) [whitespace/parens] [2] ERROR: Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp:3565: Extra space before ) [whitespace/parens] [2] ERROR: Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp:3566: Extra space before ) [whitespace/parens] [2] ERROR: Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp:3567: Extra space before ) [whitespace/parens] [2] ERROR: Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp:3569: Extra space before ) [whitespace/parens] [2] Total errors found: 8 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
EWS Watchlist
Comment 5 2019-03-29 22:23:30 PDT
Comment on attachment 366336 [details] Patch Attachment 366336 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: https://webkit-queues.webkit.org/results/11709880 New failing tests: fast/canvas/webgl/readPixels-float.html
EWS Watchlist
Comment 6 2019-03-29 22:23:31 PDT
Created attachment 366357 [details] Archive of layout-test-results from ews122 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews122 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.6
Dean Jackson
Comment 7 2019-03-30 12:39:54 PDT
EWS Watchlist
Comment 8 2019-03-30 12:42:48 PDT
Attachment 366365 [details] did not pass style-queue: ERROR: Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp:3545: One line control clauses should not use braces. [whitespace/braces] [4] ERROR: Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp:3547: One line control clauses should not use braces. [whitespace/braces] [4] ERROR: Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp:3563: Extra space before ) [whitespace/parens] [2] ERROR: Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp:3564: Extra space before ) [whitespace/parens] [2] ERROR: Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp:3565: Extra space before ) [whitespace/parens] [2] ERROR: Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp:3566: Extra space before ) [whitespace/parens] [2] ERROR: Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp:3567: Extra space before ) [whitespace/parens] [2] ERROR: Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp:3569: Extra space before ) [whitespace/parens] [2] Total errors found: 8 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Antoine Quint
Comment 9 2019-03-30 14:28:42 PDT
Comment on attachment 366365 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=366365&action=review > Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp:3547 > + } Style checker isn’t happy here, with reason!
Dean Jackson
Comment 10 2019-03-30 15:03:24 PDT
Comment on attachment 366365 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=366365&action=review >> Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp:3547 >> + } > > Style checker isn’t happy here, with reason! Nope, that's a style checker issue. This single line is a macro that's expanded to multiple statements.
Dean Jackson
Comment 11 2019-03-30 15:07:36 PDT
Note You need to log in before you can comment on or make changes to this bug.